Changes for 1.3.5:

 - removed check of function bcpowmod() in GUI Wizard (Alexei)
 - updated poller to have current system date (Alexei)
 - removed unnecessary dependencies fron autoconf script (Alexei)
 - added generation of service up/down events (Alexei)
 - fixed '--with-ldap' compilation (Eugene)
 - added popup menu for quick hosts controlling in configuration screen (Eugene)

Changes for 1.3.4:

 - added possibility to add Node with pre-defined NodeID (Eugene)
 - support of macros in remote commands (Alexei)
 - minor fix for simple checks (Alexei)
 - fixed calculation of some functions where item is integer. (Alexei)
 - added new table slides and slideshows (Alexei)
 - added server-side support of external checks. Thanks to Mike Nestor. (Alexei)
 - fixed incorrect SQL statement for ICMP check (Alexei)
 - support of multiple actions per set of conidtions (Alexei/Eugene)
 - added viwer of dicovery events (Eugene)
 - added quick help for overview (Eugene)
 - developed Dicovery system (Alexei/Eugene)
 - fixed processing of text items (Alexei)
 - fixed processing of aggregate items (Alexei)
 - added events.object (Alexei)
 - developed PopUp menu for overview (Eugene)
 - added events.source (Alexei)
 - renamed events.triggerid -> events.objectid (Alexei)
 - new tables drules,dchecks,dhosts,dservices (Alexei)
 - basic support of auto-discovery (Alexei)
 - new Server parameter StartDiscoverers (Alexei)
 - fixed "system.cpu.util[]" (Eugene)
 - removed housekeeper warnings from front-end (Alexei)
 - HTTP poller won't verify SSL certificates to enable self-signed (Alexei)
 - fixed warning when enabling/disabling action (Alexei)
 - added support of avg() for items having integer type (Alexei)
 - added user group for database down messages (Alexei/Eugene)
 - removed support of action repeats (Alexei/Eugene)
 - fixed upgrade of rights,sysmaps,sysmaps_elements (Alexei)
 - fixed initial creation of user rights in data.sql (Alexei)
 - fixes of PostgreSQL compile (Alexei)